Creo el esqueleto de AccionesNAO y mainglucosa
Mainglucosa se tendrá que borrar en un futuro pues es una clase de prueba que junto con yaml dejan hacer gets a otros paths de la URI.
Las accionesNAO por ahora solo hacen prints. En un futuro tendrán comunicación dentro.

--- a/app.yaml
+++ b/app.yaml
@@ -6,5 +6,8 @@ env_variables:
     GAE_USE_CTYPES: '1'
 
 handlers:
-- url: /.*
+- url: /
   script: main.app
+  
+- url: /glucosa/
+  script: mainglucosa.app
