--- a/app.yaml
+++ b/app.yaml
@@ -9,5 +9,11 @@ handlers:
 - url: /
   script: main.app
   
-- url: /glucosa/
-  script: mainglucosa.app
+- url: /RegisterNAO/
+  script: main.app
+  
+- url: /RegisterNAO/(.*)/
+  script: main.app
+  
+ - url: /RegisterNAO/(.*)/Delete/
+  script: main.app
